WebCore:

2008-04-22  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dan Bernstein.

        - fix https://bugs.webkit.org/show_bug.cgi?id=18584
        border-color, outline-color, column-color, -webkit-text-stroke-color,
        and -webkit-text-fill-color inheritance to correctly use parent's color
        if the parent's corresponding (border, outline, etc.)-color property
        wasn't set.

        Test: fast/borders/border-color-inherit.html

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::applyProperty):

LayoutTests:

2008-04-22  Anatoli Papirovski  <apapirovski@mac.com>

        Reviewed by Dan Bernstein.

        https://bugs.webkit.org/show_bug.cgi?id=18584
        Add a test case for border-color inheritance.

        * fast/borders/border-color-inherit.html: Added.
        * platform/mac/fast/borders/border-color-inherit-expected.checksum: Added.
        * platform/mac/fast/borders/border-color-inherit-expected.png: Added.
        * platform/mac/fast/borders/border-color-inherit-expected.txt: Added.



git-svn-id: svn://svn.chromium.org/blink/trunk@32421 bbb929c8-8fbe-4397-9dbb-9b2b20218538